--- a/.config/emacs-my/MyInit.org
+++ b/.config/emacs-my/MyInit.org
@@ -14,6 +14,7 @@
 
   (setq load-prefer-newer t)
 #+END_SRC
+
 ** Change some defaults
 #+BEGIN_SRC emacs-lisp
   (fset 'yes-or-no-p 'y-or-n-p) ; simpler
@@ -28,31 +29,35 @@
 
   (setq save-interprogram-paste-before-kill t)
 #+END_SRC
+
 ** Config edit/reload
 *** edit config
 #+BEGIN_SRC emacs-lisp
   (defun visit-config ()
     (interactive)
-    (find-file "~/.emacs.d/MyInit.org"))
+    (find-file (expand-file-name "MyInit.org" user-emacs-directory)))
 
   (global-set-key (kbd "C-c e") 'visit-config)
 #+END_SRC
+
 *** edit init
 #+BEGIN_SRC emacs-lisp
   (defun visit-init ()
       (interactive)
-      (find-file "~/.emacs.d/init.el"))
+      (find-file (expand-file-name "init.el" user-emacs-directory)))
 
   (global-set-key (kbd "C-c i") 'visit-init)
 #+END_SRC
+
 *** reload config
 #+BEGIN_SRC emacs-lisp
   (defun reload-config ()
     (interactive)
-    (org-babel-load-file (expand-file-name "~/.emacs.d/MyInit.org")))
+    (org-babel-load-file (expand-file-name "MyInit.org" user-emacs-directory)))
 
   (global-set-key (kbd "C-c r") 'reload-config)
 #+END_SRC
+
 ** UTF-8
 #+BEGIN_SRC emacs-lisp
   (set-charset-priority 'unicode)
@@ -63,6 +68,7 @@
   (prefer-coding-system        'utf-8)
   (setq default-process-coding-system '(utf-8-unix . utf-8-unix))
 #+END_SRC
+
 ** Author info
 #+BEGIN_SRC emacs-lisp
   (setq user-full-name "Eldin Gagulic gagiD"
@@ -71,6 +77,7 @@
         calendar-longitude -105.16
         calendar-location-name "BiH")
 #+END_SRC
+
 ** Help
   Brings up some help
 #+BEGIN_SRC emacs-lisp
@@ -83,6 +90,7 @@
     :commands (discover-my-major discover-my-mode)
     :bind ("C-h C-m" . discover-my-major))
 #+END_SRC
+
 ** Editing
 *** IEdit
 #+BEGIN_SRC emacs-lisp
@@ -102,6 +110,7 @@
   (add-hook 'prog-mode-hook #'smartparens-mode)
   (add-hook 'markdown-mode-hook #'smartparens-mode)
   (add-hook 'text-mode-hook #'smartparens-mode)
+  (add-hook 'yaml-mode-hook #'smartparens-mode)
 #+END_SRC
 *** Kill whole word
 #+BEGIN_SRC emacs-lisp
@@ -168,6 +177,7 @@
 
   (electric-indent-mode 1)
 #+END_SRC
+
 ** Backups
 #+BEGIN_SRC emacs-lisp
   (setq backup-directory-alist
@@ -177,12 +187,14 @@
 
   (setq create-lockfiles nil)
 #+END_SRC
+
 ** Scroll
 #+BEGIN_SRC emacs-lisp
   (setq scroll-error-top-bottom t)
 
   (setq scroll-conservatively 10000)
 #+END_SRC
+
 ** Buffers
 *** Kill other buffers
 #+BEGIN_SRC emacs-lisp
@@ -206,6 +218,7 @@
 #+BEGIN_SRC emacs-lisp
   (global-set-key (kbd "C-x C-b") 'ibuffer)
 #+END_SRC
+
 ** Counsel
 #+BEGIN_SRC emacs-lisp
   (use-package counsel
@@ -215,16 +228,19 @@
     ("C-x C-f" . counsel-find-file)
     ("C-x c k" . counsel-yank-pop))
 #+END_SRC
+
 ** Avy
 #+BEGIN_SRC emacs-lisp
   (use-package avy
     :bind ("M-s" . avy-goto-char))
 #+END_SRC
+
 ** Swiper
 #+BEGIN_SRC emacs-lisp
   (use-package swiper
     :bind ("C-s" . swiper))
 #+END_SRC
+
 ** Ivy
 #+BEGIN_SRC emacs-lisp
   (use-package ivy
@@ -235,23 +251,37 @@
     (setq ivy-use-virtual-buffers nil)
     (define-key read-expression-map (kbd "C-r") 'counsel-expression-history))
 #+END_SRC
+
 ** Dashboard
 #+BEGIN_SRC emacs-lisp
   (use-package dashboard
+    :ensure t
     :config
     (dashboard-setup-startup-hook)
-    (setq dashboard-items '((recents . 10)
-                            (projects . 10))))
+    (setq initial-buffer-choice (lambda () (get-buffer "*dashboard*")))
+    (setq dashboard-center-content t)
+    (setq dashboard-items '((projects . 10)
+                            (recents  . 5))))
+    (setq dashboard-set-init-info t)
+    (setq dashboard-set-navigator t)
+    (setq dashboard-set-heading-icons t)
+    (setq dashboard-set-file-icons t)
 #+END_SRC
+
 ** Async
 #+BEGIN_SRC emacs-lisp
   (use-package async
     :init (dired-async-mode 1))
 #+END_SRC
+
 * Look
 ** Interface
 #+BEGIN_SRC emacs-lisp
   (setq inhibit-startup-message t)
+
+  (set-frame-font "FuraCode Nerd Font Mono-14")
+  (add-to-list 'default-frame-alist '(font . "FuraCode Nerd Font Mono-14" ))
+  (set-face-attribute 'default t :font "FuraCode Nerd Font Mono-14" )
 
   (tool-bar-mode   -1)
   (menu-bar-mode   -1)
@@ -279,16 +309,37 @@
 #+END_SRC
 ** Themes
 #+BEGIN_SRC emacs-lisp
-  (use-package zerodark-theme
-    :after flycheck
-    :init
-    (load-theme 'zerodark t)
-    (zerodark-setup-modeline-format))
+;  (use-package zerodark-theme             
+;    :after flycheck
+;    :init
+;    (load-theme 'zerodark t)
+;    (zerodark-setup-modeline-format))
+
+(use-package doom-themes
+  :config
+  ;; Global settings (defaults)
+  (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
+        doom-themes-enable-italic t) ; if nil, italics is universally disabled
+  (load-theme 'doom-one t)
+
+  ;; Enable flashing mode-line on errors
+  (doom-themes-visual-bell-config)
+  
+  ;; Enable custom neotree theme (all-the-icons must be installed!)
+  (doom-themes-neotree-config)
+  ;; or for treemacs users
+  (setq doom-themes-treemacs-theme "doom-colors") ; use the colorful treemacs theme
+  (doom-themes-treemacs-config)
+  
+  ;; Corrects (and improves) org-mode's native fontification.
+  (doom-themes-org-config))
 #+END_SRC
 ** Modeline
-*** Powerline
+*** Doom modeline
 #+BEGIN_SRC emacs-lisp
-
+  (use-package doom-modeline
+    :ensure t
+    :hook (after-init . doom-modeline-mode))
 #+END_SRC
 *** Diminish
 #+BEGIN_SRC emacs-lisp
@@ -322,28 +373,52 @@
 * Org mode
 ** Org common
 #+BEGIN_SRC emacs-lisp
-  (add-to-list 'org-structure-template-alist
-               '("el" "#+BEGIN_SRC emacs-lisp\n?\n#+END_SRC"))
+  (setq org-structure-template-alist
+  '(("a" . "export ascii\n")
+    ("c" . "center\n")
+    ("C" . "comment\n")
+    ("e" . "example\n")
+    ("E" . "export")
+    ("h" . "export html\n")
+    ("l" . "export latex\n")
+    ("q" . "quote\n")
+    ("s" . "src")
+    ("v" . "verse\n")))
 #+END_SRC
+
 ** Org bullets
 #+BEGIN_SRC emacs-lisp
-  (use-package org-bullets
-    :config (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1))))
+(use-package org
+  :hook ((org-mode . visual-line-mode)
+         (org-mode . org-indent-mode)))
+
+(use-package org-bullets :hook (org-mode . org-bullets-mode))
 #+END_SRC
+
 * Programming
+** .editorconfig
+#+begin_src emacs-lisp
+(use-package editorconfig
+  :ensure t
+  :config
+  (editorconfig-mode 1))
+#+end_src
 ** Company
 #+BEGIN_SRC emacs-lisp
   (use-package company
+    :hook (prog-mode . company-mode)
     :config
     (setq company-idle-delay 0)
     (setq company-dabbrev-downcase 0)
-    (setq company-minimum-prefix-length 1))
+    (setq company-minimum-prefix-length 1)
+    (setq company-tooltip-align-annotations t))
 
   (with-eval-after-load 'company
     (define-key company-active-map (kbd "C-n") #'company-select-next)
     (define-key company-active-map (kbd "C-p") #'company-select-previous)
     (define-key company-active-map (kbd "SPC") #'company-abort))
 #+END_SRC
+
 ** Yasnippet
 #+BEGIN_SRC emacs-lisp
   (use-package yasnippet
@@ -351,18 +426,56 @@
       (use-package yasnippet-snippets)
       (yas-reload-all))
 #+END_SRC
+
 ** FlyCheck
 #+BEGIN_SRC emacs-lisp
   (use-package flycheck
-    :init (global-flycheck-mode))
+    :hook (prog-mode . flycheck-mode))
 #+END_SRC
+
+** LSP
+#+BEGIN_SRC emacs-lisp
+(use-package lsp-mode
+  :defer t
+  :commands (lsp lsp-deferred)
+  :hook ((before-save . lsp-format-buffer)
+         (before-save . lsp-organize-imports))
+  :config
+    (setq lsp-vetur-format-default-formatter-css "none")
+    (setq lsp-vetur-format-default-formatter-html "none")
+    (setq lsp-vetur-format-default-formatter-js "none")
+    (setq lsp-vetur-validation-template nil))
+
+(use-package company-lsp
+  :after lsp-mode
+  :commands lsp-ui-mode
+  :config
+  (push 'company-lsp company-backends))
+
+(use-package lsp-ui
+  :after lsp-mode
+  :commands lsp-ui-mode
+  :config 
+    (setq lsp-idle-delay 0.500)
+    (setq lsp-ui-sideline-enable t)
+    (setq lsp-ui-doc-enable nil)
+    (setq lsp-ui-peek-enable t)
+    (setq lsp-ui-peek-always-show t))
+
+(use-package dap-mode)
+(require 'dap-firefox)
+
+(use-package lsp-ivy :commands lsp-ivy-workspace-symbol)
+#+END_SRC
+
 ** Projectile
 *** Enable projectile globally
 #+BEGIN_SRC emacs-lisp
   (use-package projectile
     :init (projectile-mode 1)
     :config
-    (setq projectile-completion-system 'ivy))
+    (setq projectile-completion-system 'ivy)
+    (define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map))
 #+END_SRC
 *** Compile on f5
 #+BEGIN_SRC emacs-lisp
@@ -468,35 +581,30 @@
     (require 'company)
     (slime-setup '(slime-fancy slime-company)))
 #+END_SRC
+
 *** Yasnippet
 #+BEGIN_SRC emacs-lisp
   (add-hook 'emacs-lisp-mode-hook 'yas-minor-mode)
 #+END_SRC
+
 *** Eldoc
 #+BEGIN_SRC emacs-lisp
   (add-hook 'emacs-lisp-mode-hook 'eldoc-mode)
 #+END_SRC
+
 ** Lua
 *** Company
 #+BEGIN_SRC emacs-lisp
-  (add-hook 'lua-mode-hook 'company-mode)
-
-  (defun custom-lua-repl-bindings ()
-    (local-set-key (kbd "C-c C-s") 'lua-show-process-buffer)
-    (local-set-key (kbd "C-c C-h") 'lua-hide-process-buffer))
-
   (defun lua-mode-company-init ()
     (setq-local company-backends '((company-lua
                                     company-etags
                                     company-dabbrev-code))))
 
-  (use-package company-lua
-    :config
-    (require 'company)
-    (setq lua-indent-level 4)
-    (setq lua-indent-string-contents t)
-    (add-hook 'lua-mode-hook 'custom-lua-repl-bindings)
-    (add-hook 'lua-mode-hook 'lua-mode-company-init))
+  ;(use-package company-lua
+    ;:config
+    ;(setq lua-indent-level 4)
+    ;(setq lua-indent-string-contents t)
+    ;(add-hook 'lua-mode-hook #'lua-mode-company-init))
 #+END_SRC
 *** Yasnippet
 #+BEGIN_SRC emacs-lisp
@@ -536,6 +644,123 @@
   (use-package meson-mode
     :init (add-hook 'meson-mode-hook 'company-mode))
 #+END_SRC
+
+** Ansible
+*** YAML
+#+BEGIN_SRC emacs-lisp
+  (use-package yaml-mode
+    :init (add-to-list 'auto-mode-alist '("\\.yml\\'" . yaml-mode)))
+#+END_SRC
+
+*** Flycheck
+#+BEGIN_SRC emacs-lisp
+  (use-package flycheck-yamllint
+    :init
+    (progn
+      (eval-after-load 'flycheck
+        '(add-hook 'flycheck-mode-hook 'flycheck-yamllint-setup))))
+#+END_SRC
+
+*** Ansible mode
+#+BEGIN_SRC emacs-lisp
+  (use-package ansible
+    :init (add-hook 'yaml-mode-hook '(lambda () (ansible 1))))
+#+END_SRC
+
+** Rust
+*** General
+#+BEGIN_SRC emacs-lisp
+(use-package rust-mode
+  :hook (rust-mode . lsp))
+
+;; Add keybindings for interacting with Cargo
+(use-package cargo
+  :hook (rust-mode . cargo-minor-mode))
+
+(use-package flycheck-rust
+  :config (add-hook 'flycheck-mode-hook #'flycheck-rust-setup))
+#+END_SRC
+*** Yasnippet
+#+BEGIN_SRC emacs-lisp
+  (add-hook 'rust-mode-hook 'yas-minor-mode)
+#+END_SRC
+** TOML
+#+BEGIN_SRC emacs-lisp
+(use-package toml-mode)
+#+END_SRC
+** VHDL
+#+BEGIN_SRC emacs-lisp
+(use-package  vhdl-mode)
+
+(add-hook 'vhdl-mode-hook 'yas-minor-mode)
+#+END_SRC
+** Web
+#+begin_src emacs-lisp
+(use-package web-mode
+  :mode ("\\.html?\\'"
+         "\\.php\\'"
+         "\\.svelte\\'"
+         "\\.js\\'"
+         )
+  :init (add-hook 'web-mode-hook
+                  (lambda ()
+                    (emmet-mode +1)
+                    (subword-mode +1)
+                    (smartparens-mode -1))))
+
+(add-to-list 'auto-mode-alist
+             '("\\.njk\\'" . (lambda ()
+                               (web-mode)
+                               (web-mode-set-engine "django")
+                               (setq web-mode-enable-front-matter-block t))))
+
+(use-package css-mode
+  :mode "\\.css\\'"
+  :config
+  (setq css-indent-level 4)
+  (setq css-indent-offset 4))
+
+(use-package emmet-mode
+  :delight
+  :bind ((:map emmet-mode-keymap
+               ("M-e" . emmet-expand-line)))
+  :hook (css-mode sgml-mode web-mode vue-mode))
+
+(use-package js2-mode
+  :mode "\\.js\\'"
+  :config
+  ;;(add-hook 'js2-mode-hook #'prettier-js-mode)
+  (add-hook 'js2-mode-hook #'js2-imenu-extras-mode)
+  (add-hook 'js2-mode-hook #'add-node-modules-path))
+
+(use-package add-node-modules-path)
+
+(use-package xref-js2
+  :after js2-mode
+  :mode (("\\.js\\'" . js2-mode)))
+
+(use-package prettier-js
+  :delight " Pr")
+#+end_src
+** Vue
+#+begin_src emacs-lisp
+(use-package vue-mode
+  :mode "\\.vue\\'"
+  :hook ((vue-mode . prettier-js-mode))
+  :config
+  (add-hook 'vue-mode-hook #'lsp)
+  (setq prettier-js-args '("--parser vue")))
+
+  (add-hook 'vue-mode-hook
+            (lambda ()
+              (emmet-mode +1)
+              (subword-mode +1)
+              (smartparens-mode -1)))
+
+(add-hook 'mmm-major-mode-hook
+          (lambda ()
+            (set-face-background 'mmm-default-submode-face nil)))
+#+end_src
 * Git
 ** EDiff
 #+BEGIN_SRC emacs-lisp
@@ -545,6 +770,7 @@
     (setq-default ediff-highlight-all-diffs 'nil)
     (setq ediff-diff-options "-w"))
 #+END_SRC
+
 ** Magit
 #+BEGIN_SRC emacs-lisp
   (use-package magit
@@ -563,3 +789,4 @@
 
   (use-package magit-popup)
 #+END_SRC
+
