--- a/.config/emacs/MyInit.org
+++ b/.config/emacs/MyInit.org
@@ -4,54 +4,49 @@
 #+LANGUAGE: en
 #+OPTIONS: num:nil
 
-* Packages
-#+begin_src emacs-lisp
-  (setq use-package-always-ensure t)
-
-  (use-package auto-compile
-    :config (auto-compile-on-load-mode))
-
-  (setq load-prefer-newer t)
-#+end_src
-
 * Better defaults
 #+begin_src emacs-lisp
-  (fset 'yes-or-no-p 'y-or-n-p) ; simpler
+    (fset 'yes-or-no-p 'y-or-n-p) ; simpler
 
-  (delete-selection-mode t) ; delete selection
-  (transient-mark-mode t)   ; delete selection on type?
+    (delete-selection-mode t) ; delete selection
+    (transient-mark-mode t)   ; delete selection on type?
 
-  (setq global-auto-revert-non-file-buffers t)
-  (global-auto-revert-mode 1) ; reload buffer
+    (setq global-auto-revert-non-file-buffers t)
+    (global-auto-revert-mode 1) ; reload buffer
 
-  ;(setq ring-bell-function 'ignore) ; people say this is anoying
-  ;(setq visible-bell t)
+    ;(setq ring-bell-function 'ignore) ; people say this is anoying
+    (setq visible-bell t)
 
-  ;(setq save-interprogram-paste-before-kill t)
+    ;(setq save-interprogram-paste-before-kill t)
 
-  (setq user-emacs-directory (expand-file-name "~/.cache/emacs/")
-        url-history-file (expand-file-name "url/history" user-emacs-directory))
+    (setq user-emacs-directory (expand-file-name "~/.cache/emacs/")
+	  url-history-file (expand-file-name "url/history" user-emacs-directory))
 
-    ;; Keep customization settings in a temporary file (thanks Ambrevar!)
-  (setq custom-file
-        (if (boundp 'server-socket-dir)
-            (expand-file-name "custom.el" server-socket-dir)
-          (expand-file-name (format "emacs-custom-%s.el" (user-uid)) temporary-file-directory)))
-  (load custom-file t)
+    (setq backup-directory-alist
+	`((".*" . ,temporary-file-directory)))
+  (setq auto-save-file-name-transforms
+	`((".*" ,temporary-file-directory t)))
 
+  (setq create-lockfiles nil)
+  (setq create-backup-files nil)
 
-;  (global-set-key (kbd "<escape>") 'keyboard-escape-quit)
+      ;; Keep customization settings in a temporary file (thanks Ambrevar!)
+    (setq custom-file
+	  (if (boundp 'server-socket-dir)
+	      (expand-file-name "custom.el" server-socket-dir)
+	    (expand-file-name (format "emacs-custom-%s.el" (user-uid)) temporary-file-directory)))
+    (load custom-file t)
 
-(global-prettify-symbols-mode t)
+  (global-prettify-symbols-mode t)
 #+end_src
 
 * Look
 #+begin_src emacs-lisp
   (setq inhibit-startup-message t)
 
-  (set-frame-font "FiraCode Nerd Font Mono-14")
-  (add-to-list 'default-frame-alist '(font . "FiraCode Nerd Font Mono-14" ))
-  (set-face-attribute 'default t :font "FiraCode Nerd Font Mono-14" )
+  (set-frame-font "FiraCode Nerd Font Mono-16")
+  (add-to-list 'default-frame-alist '(font . "FiraCode Nerd Font Mono-16" ))
+  (set-face-attribute 'default t :font "FiraCode Nerd Font Mono-16" )
 
   (tool-bar-mode   -1)
   (menu-bar-mode   -1)
@@ -59,20 +54,24 @@
 
   (setq sentence-end-double-space nil)
 
-  (set-fringe-mode 10)
+  (set-fringe-mode 16)
 
   (column-number-mode)
-  (dolist (mode '(text-mode-hook
-                  prog-mode-hook
-                  conf-mode-hook))
+
+  (dolist (mode '(
+		  prog-mode-hook
+		  conf-mode-hook))
     (add-hook mode (lambda () (display-line-numbers-mode 1))))
 
-  ;; Override some modes which derive from the above
-  (dolist (mode '(org-mode-hook))
+  (dolist (mode '(org-mode-hook
+		term-mode-hook
+		shell-mode-hook
+		treemacs-mode-hook
+		eshell-mode-hook))
     (add-hook mode (lambda () (display-line-numbers-mode 0))))
 
-    (use-package beacon
-      :config (beacon-mode 1))
+  (use-package beacon
+    :config (beacon-mode 1))
 
   (use-package emojify
     :config (add-hook 'after-init-hook #'global-emojify-mode))
@@ -85,34 +84,72 @@
   (setq scroll-step 1) ;; keyboard scroll one line at a time
 #+end_src
 
+* Dashboard
+#+begin_src emacs-lisp
+(use-package
+ dashboard
+ :config
+ (dashboard-setup-startup-hook)
+ (setq dashboard-center-content t)
+ (setq dashboard-items '((projects . 10) (recents . 5))))
+
+(setq dashboard-set-init-info t)
+(setq dashboard-set-navigator t)
+(setq dashboard-set-heading-icons t)
+(setq dashboard-set-file-icons t)
+
+(if (< (length command-line-args) 2)
+    (setq initial-buffer-choice
+          (lambda () (get-buffer "*dashboard*"))))
+#+end_src
+
 * Theme
 #+begin_src emacs-lisp
-      (use-package doom-themes
-          :config
-          (load-theme 'doom-one t)
+  (use-package
+    doom-themes
+   :config (load-theme 'doom-one t)
 
-          (doom-themes-visual-bell-config)
+   (doom-themes-visual-bell-config)
 
-          (setq doom-themes-treemacs-theme "doom-colors")
-          (doom-themes-treemacs-config)
-          (doom-themes-org-config))
+   (setq doom-themes-treemacs-theme "doom-colors")
+   (doom-themes-treemacs-config)
+   (doom-themes-org-config))
 
-  (use-package doom-modeline
-    :ensure t
-    :init (doom-modeline-mode 1))
-
-
-    (use-package treemacs
-          :ensure t
-          :defer t
-          :init
-          (with-eval-after-load 'winum
-            (define-key winum-keymap (kbd "M-0") #'treemacs-select-window)))
+  (use-package all-the-icons)
+  (use-package doom-modeline :init (doom-modeline-mode 1))
+  (setq doom-modeline-height 42)
 
 
-          (use-package treemacs-projectile
-            :after (treemacs projectile)
-            :ensure t)
+  (use-package
+   treemacs
+   :defer t
+   :init
+  (setq treemacs-follow-after-init t
+	treemacs-is-never-other-window t
+	treemacs-sorting 'alphabetic-case-insensitive-asc
+	treemacs-persist-file (concat "~/.cache/emacs/" "treemacs-persist")
+	treemacs-last-error-persist-file (concat "~/.cache/emacs/" "treemacs-last-error-persist"))
+  (with-eval-after-load 'winum
+    (define-key winum-keymap (kbd "M-0") #'treemacs-select-window))
+   :bind
+    ("<f4>" . treemacs)
+    :config
+    (treemacs-follow-mode -1))
+
+  (use-package treemacs-all-the-icons)
+
+  (use-package treemacs-magit
+  :after treemacs magit
+  )
+
+  (use-package treemacs-icons-dired
+    :hook (dired-mode . treemacs-icons-dired-mode)
+  )
+
+  (use-package
+   treemacs-projectile
+   :after (treemacs projectile)
+   )
 #+end_src
 
 * Configs
@@ -138,34 +175,188 @@
 
 * Editing
 #+begin_src emacs-lisp
-(prefer-coding-system 'utf-8-unix)
+  (prefer-coding-system 'utf-8-unix)
+
+  (setq god-mode-enable-function-key-translation nil)
+  (use-package god-mode
+    :bind ("<escape>" . god-mode-all))
+
+  (use-package editorconfig
+    :config
+    (editorconfig-mode 1))
+
+  (use-package yasnippet
+    :diminish yas-minor-mode
+    :bind (:map yas-minor-mode-map
+		("C-c C-e" . yas-expand)
+		("<tab>" . yas-expand))
+
+    :config
+    (yas-reload-all)
+    (add-hook 'prog-mode-hook #'yas-minor-mode)
+    ;;(yas-global-mode 1)
+    (setq yas-prompt-functions '(yas-dropdown-prompt
+				 yas-ido-prompt
+				 yas-completing-prompt)))
+
+
+  (use-package yasnippet-snippets)
+  (add-hook 'prog-mode-hook #'yas-minor-mode)
+
+  (use-package format-all)
+
+  (add-hook 'prog-mode-hook #'format-all-ensure-formatter)
+  (add-hook 'prog-mode-hook 'format-all-mode)
+#+end_src
+* Keybinds
+#+begin_src emacs-lisp
+(use-package hydra)
 #+end_src
 
 * Search
 #+begin_src emacs-lisp
       (use-package avy
-          :bind ("M-s" . avy-goto-char))
-
-    (use-package swiper
-        :bind ("C-s" . swiper))
+	:bind
+	("M-s" . avy-goto-char)
+	("M-S-s" . avy-goto-char-timer))
 
   (use-package ivy
-      :bind
-      ("C-x C-r" . ivy-resume)
-      :config
-      (ivy-mode 1)
-      (setq ivy-use-virtual-buffers t)
-      (define-key read-expression-map (kbd "C-r") 'counsel-expression-history))
+    :diminish
+    :bind (("C-s" . swiper)
+	   :map ivy-minibuffer-map
+	   ("TAB" . ivy-alt-done)
+	   ("C-l" . ivy-alt-done)
+	   ("C-j" . ivy-next-line)
+	   ("C-k" . ivy-previous-line)
+	   :map ivy-switch-buffer-map
+	   ("C-k" . ivy-previous-line)
+	   ("C-l" . ivy-done)
+	   ("C-d" . ivy-switch-buffer-kill)
+	   :map ivy-reverse-i-search-map
+	   ("C-k" . ivy-previous-line)
+	   ("C-d" . ivy-reverse-i-search-kill))
+    :config
+    (ivy-mode 1))
+
+    (use-package ivy-rich
+      :init
+    (ivy-rich-mode 1))
 
       (use-package counsel
-        :bind
-        ("M-x" . counsel-M-x)
-        ("C-x C-m" . counsel-M-x)
-        ("C-x C-f" . counsel-find-file)
-        ("C-x c k" . counsel-yank-pop)
-         ("C-M-l" . counsel-imenu)
-         :config
-  (setq ivy-initial-inputs-alist nil))
+	:bind
+	("M-x" . counsel-M-x)
+	("C-x C-m" . counsel-M-x)
+	("C-x C-f" . counsel-find-file)
+	("C-x c k" . counsel-yank-pop)
+	("C-M-l" . counsel-imenu)
+	:config
+	(setq ivy-initial-inputs-alist nil))
+#+end_src
+
+* Projectile
+#+begin_src emacs-lisp
+(use-package projectile
+  :diminish projectile-mode
+  :config (projectile-mode)
+  :custom ((projectile-completion-system 'ivy))
+  :bind-keymap
+  ("C-c p" . projectile-command-map))
+
+(use-package counsel-projectile
+  :config (counsel-projectile-mode))
+#+end_src
+
+* LSP
+#+begin_src emacs-lisp
+    (use-package flycheck
+      :init (global-flycheck-mode))
+
+    (use-package lsp-mode
+      :init
+      (setq lsp-keymap-prefix "C-c l")
+      :hook (
+	     (prog-mode . lsp-deferred)
+	     (lsp-mode . lsp-enable-which-key-integration))
+      :commands (lsp lsp-deferred)
+      :config
+      (setq lsp-prefer-flymake nil
+	    lsp-eldoc-enable-hover nil))
+
+    (use-package lsp-ui
+      :commands lsp-ui-mode
+      :hook (lsp-mode . lsp-ui-mode))
+
+    (use-package lsp-ivy :commands lsp-ivy-workspace-symbol)
+    (use-package lsp-treemacs :commands lsp-treemacs-errors-list)
+
+    (use-package dap-mode)
+    (dap-mode 1)
+    (dap-ui-mode 1)
+    (dap-tooltip-mode 1)
+    (tooltip-mode 1)
+    (dap-ui-controls-mode 1)
+
+    (add-hook 'dap-stopped-hook
+	    (lambda (arg) (call-interactively #'dap-hydra)))
+    (require 'dap-chrome)
+    (require 'dap-firefox)
+    (require 'dap-node)
+
+    (use-package company
+    :after lsp-mode
+    :hook (lsp-mode . company-mode)
+    :bind (:map company-active-map
+	   ("<tab>" . company-complete-selection))
+	  (:map lsp-mode-map
+	   ("<tab>" . company-indent-or-complete-common))
+    :custom
+    (company-minimum-prefix-length 1)
+    (company-idle-delay 0.0))
+
+  (use-package company-box
+    :hook (company-mode . company-box-mode))
+#+end_src
+
+* Programming
+** cmn
+#+begin_src emacs-lisp
+  (use-package tree-sitter)
+  (use-package tree-sitter-langs)
+  (use-package tree-sitter-indent)
+#+end_src
+
+** LISP
+#+begin_src emacs-lisp
+(use-package elisp-autofmt
+  :commands (elisp-autofmt-mode elisp-autofmt-buffer)
+  :hook (emacs-lisp-mode . elisp-autofmt-mode))
+#+end_src
+
+** Web
+#+begin_src emacs-lisp
+   (use-package emmet-mode
+     :delight
+     :hook (css-mode sgml-mode web-mode vue-mode))
+
+  (use-package json-mode)
+
+  (with-eval-after-load 'js
+  (define-key js-mode-map (kbd "M-.") nil))
+
+   (use-package web-mode
+	 :mode ("\\.html?\\'"
+		"\\.php\\'"
+		"\\.svelte\\'"
+		"\\.jsx\\'"
+		"\\.vue\\'"
+		))
+#+end_src
+
+** c#
+#+begin_src emacs-lisp
+(use-package csharp-mode
+  :config
+  (add-to-list 'auto-mode-alist '("\\.cs\\'" . csharp-tree-sitter-mode)))
 #+end_src
 
 * Help
@@ -182,28 +373,26 @@
 
 * Org
  #+BEGIN_SRC emacs-lisp
-            (require 'org-tempo)
+   (require 'org-tempo)
 
-          (add-to-list 'org-structure-template-alist '("sh" . "src sh"))
-          (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
-          (add-to-list 'org-structure-template-alist '("sc" . "src scheme"))
-          (add-to-list 'org-structure-template-alist '("ts" . "src typescript"))
-          (add-to-list 'org-structure-template-alist '("py" . "src python"))
-          (add-to-list 'org-structure-template-alist '("go" . "src go"))
-          (add-to-list 'org-structure-template-alist '("yaml" . "src yaml"))
-          (add-to-list 'org-structure-template-alist '("json" . "src json"))
+   (add-to-list 'org-structure-template-alist '("sh" . "src sh"))
+   (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
+   (add-to-list 'org-structure-template-alist '("sc" . "src scheme"))
+   (add-to-list 'org-structure-template-alist '("ts" . "src typescript"))
+   (add-to-list 'org-structure-template-alist '("py" . "src python"))
+   (add-to-list 'org-structure-template-alist '("go" . "src go"))
+   (add-to-list 'org-structure-template-alist '("yaml" . "src yaml"))
+   (add-to-list 'org-structure-template-alist '("json" . "src json"))
 
-              (use-package org
-        :hook ((org-mode . visual-line-mode)
-               (org-mode . org-indent-mode)))
+   (use-package org
+     :hook ((org-mode . visual-line-mode)))
 
-      (use-package org-bullets :hook (org-mode . org-bullets-mode))
+   (use-package org-bullets :hook (org-mode . org-bullets-mode))
 
-    (setq org-ellipsis "⤵")
-  (setq org-hide-leading-stars t)
-(setq org-src-fontify-natively t)
+   (setq org-ellipsis "⤵")
+   (setq org-hide-leading-stars t)
+   (setq org-src-fontify-natively t)
 #+END_SRC
-
 
 * Magit
 #+BEGIN_SRC emacs-lisp
@@ -224,18 +413,3 @@
   (use-package magit-popup)
 #+END_SRC
 
-* Dashboard
-#+begin_src emacs-lisp
- (use-package dashboard
-    :ensure t
-    :config
-    (dashboard-setup-startup-hook)
-    (setq initial-buffer-choice (lambda () (get-buffer  "*dashboard*")))
-    (setq dashboard-center-content t)
-    (setq dashboard-items '((projects . 10)
-                            (recents  . 5))))
-    (setq dashboard-set-init-info t)
-    (setq dashboard-set-navigator t)
-    (setq dashboard-set-heading-icons t)
-    (setq dashboard-set-file-icons t)
-#+end_src
