--- a/.config/emacs/MyInit.org
+++ b/.config/emacs/MyInit.org
@@ -28,14 +28,15 @@
 	`((".*" ,temporary-file-directory t)))
 
   (setq create-lockfiles nil)
+  (setq make-backup-files nil)
   (setq create-backup-files nil)
 
-      ;; Keep customization settings in a temporary file (thanks Ambrevar!)
-    (setq custom-file
-	  (if (boundp 'server-socket-dir)
-	      (expand-file-name "custom.el" server-socket-dir)
-	    (expand-file-name (format "emacs-custom-%s.el" (user-uid)) temporary-file-directory)))
-    (load custom-file t)
+  ;; Keep customization settings in a temporary file (thanks Ambrevar!)
+  (setq custom-file
+	(if (boundp 'server-socket-dir)
+	    (expand-file-name "custom.el" server-socket-dir)
+	  (expand-file-name (format "emacs-custom-%s.el" (user-uid)) temporary-file-directory)))
+  (load custom-file t)
 
   (global-prettify-symbols-mode t)
 #+end_src
@@ -50,7 +51,6 @@
 
   (tool-bar-mode   -1)
   (menu-bar-mode   -1)
-  (scroll-bar-mode -1)
 
   (setq sentence-end-double-space nil)
 
@@ -173,23 +173,50 @@
   (global-set-key (kbd "C-c r") 'reload-config)
 #+END_SRC
 
+* Functions
+#+begin_src emacs-lisp
+  (defun kill-other-buffers ()
+	"Kill all other buffers."
+	(interactive)
+	(mapc 'kill-buffer (delq (current-buffer) (buffer-list))))
+
+  (defun screenshot (type)
+  "Save a screenshot of the current frame as an image in TYPE format.
+Saves to a temp file and puts the filename in the kill ring."
+  (let* ((ext (concat "." (symbol-name type)))
+         (filename (make-temp-file "Emacs-" nil ext))
+         (data (x-export-frames nil type)))
+    (with-temp-file filename
+      (insert data))
+    (kill-new filename)
+    (message filename)))
+
+(defun screenshot-svg ()
+  "Save a screenshot of the current frame as an SVG image.
+Saves to a temp file and puts the filename in the kill ring."
+  (interactive)
+  (screenshot 'svg))
+
+(defun screenshot-png ()
+  "Save a screenshot of the current frame as an PNG image.
+Saves to a temp file and puts the filename in the kill ring."
+  (interactive)
+  (screenshot 'png))
+#+end_src
+
 * Editing
 #+begin_src emacs-lisp
   (prefer-coding-system 'utf-8-unix)
+  (delete-selection-mode 1)
 
   (setq god-mode-enable-function-key-translation nil)
   (use-package god-mode
     :bind ("<escape>" . god-mode-all))
 
-  (use-package editorconfig
-    :config
-    (editorconfig-mode 1))
-
   (use-package yasnippet
     :diminish yas-minor-mode
     :bind (:map yas-minor-mode-map
-		("C-c C-e" . yas-expand)
-		("<tab>" . yas-expand))
+		("C-c C-e" . yas-expand))
 
     :config
     (yas-reload-all)
@@ -207,6 +234,12 @@
 
   (add-hook 'prog-mode-hook #'format-all-ensure-formatter)
   (add-hook 'prog-mode-hook 'format-all-mode)
+
+  (use-package ws-butler
+    :commands
+    (ws-butler-mode)
+    :init
+    (setq ws-butler-convert-leading-tabs-or-spaces t))
 #+end_src
 * Keybinds
 #+begin_src emacs-lisp
@@ -215,10 +248,10 @@
 
 * Search
 #+begin_src emacs-lisp
-      (use-package avy
-	:bind
-	("M-s" . avy-goto-char)
-	("M-S-s" . avy-goto-char-timer))
+  (use-package avy
+    :bind
+    ("M-s" . avy-goto-char)
+    ("M-S-s" . avy-goto-char-timer))
 
   (use-package ivy
     :diminish
@@ -238,32 +271,52 @@
     :config
     (ivy-mode 1))
 
-    (use-package ivy-rich
-      :init
+  (use-package ivy-rich
+    :init
     (ivy-rich-mode 1))
 
-      (use-package counsel
-	:bind
-	("M-x" . counsel-M-x)
-	("C-x C-m" . counsel-M-x)
-	("C-x C-f" . counsel-find-file)
-	("C-x c k" . counsel-yank-pop)
-	("C-M-l" . counsel-imenu)
-	:config
-	(setq ivy-initial-inputs-alist nil))
+  (use-package counsel
+    :bind
+    ("M-x" . counsel-M-x)
+    ("C-x C-f" . counsel-find-file)
+    ("C-x c k" . counsel-yank-pop)
+    ("C-M-l" . counsel-imenu)
+    ("C-c s a" . counsel-ag)
+    ("C-c s r" . counsel-rg)
+    ("<f1> f" . counsel-describe-function)
+    ("<f1> v" . counsel-describe-variable)
+    ("<f1> o" . counsel-describe-symbol)
+    ("<f1> l" . counsel-find-library)
+    ("<f2> i" . counsel-info-lookup-symbol)
+    ("<f2> u" . counsel-unicode-char)
+  :config
+  (setq ivy-initial-inputs-alist nil))
+#+end_src
+
+* Buffers
+#+begin_src emacs-lisp
+(use-package popper
+  :ensure t
+  :hook
+  (after-init-hook . popper-mode)
+  :init
+  (setq popper-reference-buffers
+        '("\\*Messages\\*"
+          "Output\\*$"
+          compilation-mode)))
 #+end_src
 
 * Projectile
 #+begin_src emacs-lisp
-(use-package projectile
-  :diminish projectile-mode
-  :config (projectile-mode)
-  :custom ((projectile-completion-system 'ivy))
-  :bind-keymap
-  ("C-c p" . projectile-command-map))
+  (use-package projectile
+    :diminish projectile-mode
+    :config (projectile-mode)
+    :custom ((projectile-completion-system 'ivy))
+    :bind-keymap
+    ("C-c p" . projectile-command-map))
 
-(use-package counsel-projectile
-  :config (counsel-projectile-mode))
+  (use-package counsel-projectile
+    :config (counsel-projectile-mode))
 #+end_src
 
 * LSP
@@ -323,6 +376,35 @@
   (use-package tree-sitter)
   (use-package tree-sitter-langs)
   (use-package tree-sitter-indent)
+
+  (use-package editorconfig
+    :commands
+    (editorconfig-mode)
+    :init
+    (setq editorconfig-trim-whitespaces-mode 'ws-butler-mode)
+    (setq editorconfig-exclude-modes '(emacs-lisp-mode
+				       lisp-mode
+				       org-mode)))
+
+  (use-package hl-todo)
+
+  (use-package idle-highlight-mode
+    :hook
+    (prog-mode-hook . idle-highlight-mode))
+
+  (use-package ligature
+    :commands
+    (ligature-set-ligatures)
+    :hook
+    (prog-mode-hook . ligature-mode)
+    :config
+    (ligature-set-ligatures
+     'prog-mode
+     '("-<<" "-<" "-<-" "<--" "<---" "<<-" "<-" "->" "->>" "-->" "--->" "->-" ">-" ">>-" "<->" "<-->" "<--->" "<---->" "<!--"
+       "=<<" "=<" "=<=" "<==" "<===" "<<=" "<=" "=>" "=>>" "==>" "===>" "=>=" ">=" ">>=" "<=>" "<==>" "<===>" "<====>" "<!---"
+       "<------" "------>" "<=====>" "<~~" "<~" "~>" "~~>" "::" ":::" "\\/" "/\\" "==" "!=" "/=" "~=" "<>" "===" "!==" "=/=" "=!="
+       ":=" ":-" ":+" "<*" "<*>" "*>" "<|" "<|>" "|>" "<." "<.>" ".>" "+:" "-:" "=:" "<******>" "(*" "*)" "++" "+++" "|-" "-|"
+       "&&" "||")))
 #+end_src
 
 ** LISP
@@ -334,29 +416,57 @@
 
 ** Web
 #+begin_src emacs-lisp
-   (use-package emmet-mode
-     :delight
-     :hook (css-mode sgml-mode web-mode vue-mode))
+  (use-package nginx-mode
+    :mode
+    "/nginx/.+\\.conf\\'"
+    "nginx\\.conf\\'")
 
-  (use-package json-mode)
+  (use-package emmet-mode
+    :delight
+    :hook (css-mode sgml-mode web-mode vue-mode))
+
+  (use-package json-mode
+    :mode
+    "\\(?:\\(?:\\.json\\|\\.jsonld\\|\\.babelrc\\|\\.bowerrc\\|composer\\.lock\\)\\'\\)")
+  (use-package yaml-mode
+    :mode "\\.\\(e?ya?\\|ra\\)ml\\'")
+
+  (use-package web-mode
+    :mode ("\\.html?\\'"
+	   "\\.php\\'"
+	   "\\.svelte\\'"
+	   "\\.jsx\\'"
+	   "\\.vue\\'"
+	   ))
+
+  (use-package elm-mode)
+#+end_src
+
+** Js/Ts
+#+begin_src emacs-lisp
+  (use-package js
+    :mode
+    ("\\.js[mx]?\\'" . javascript-mode)
+    ("\\.har\\'" . javascript-mode))
 
   (with-eval-after-load 'js
   (define-key js-mode-map (kbd "M-.") nil))
 
-   (use-package web-mode
-	 :mode ("\\.html?\\'"
-		"\\.php\\'"
-		"\\.svelte\\'"
-		"\\.jsx\\'"
-		"\\.vue\\'"
-		))
+  (use-package typescript-mode)
 #+end_src
 
-** c#
+** C#
 #+begin_src emacs-lisp
 (use-package csharp-mode
   :config
   (add-to-list 'auto-mode-alist '("\\.cs\\'" . csharp-tree-sitter-mode)))
+#+end_src
+
+** Docker
+#+begin_src emacs-lisp
+  (use-package docker)
+  (use-package dockerfile-mode)
+  (use-package docker-compose-mode)
 #+end_src
 
 * Help
@@ -392,6 +502,9 @@
    (setq org-ellipsis "⤵")
    (setq org-hide-leading-stars t)
    (setq org-src-fontify-natively t)
+
+   (use-package org-modern
+     :hook (org-mode . org-modern-mode))
 #+END_SRC
 
 * Magit
@@ -413,3 +526,9 @@
   (use-package magit-popup)
 #+END_SRC
 
+
+* maybe good
+#+begin_src emacs-lisp
+  (use-package gif-screencast :ensure t)
+
+#+end_src
