--- a/.config/emacs/MyInit.org
+++ b/.config/emacs/MyInit.org
@@ -106,51 +106,66 @@
 
 * Theme
 #+begin_src emacs-lisp
-  (use-package
-    doom-themes
-   :config (load-theme 'doom-one t)
+    (use-package
+      doom-themes
+     :config (load-theme 'doom-one t)
 
-   (doom-themes-visual-bell-config)
+     (doom-themes-visual-bell-config)
 
-   (setq doom-themes-treemacs-theme "doom-colors")
-   (doom-themes-treemacs-config)
-   (doom-themes-org-config))
+     (setq doom-themes-treemacs-theme "doom-colors")
+     (doom-themes-treemacs-config)
+     (doom-themes-org-config))
 
-  (use-package all-the-icons)
-  (use-package doom-modeline :init (doom-modeline-mode 1))
-  (setq doom-modeline-height 42)
+    (use-package all-the-icons)
+    (use-package doom-modeline :init (doom-modeline-mode 1))
+    (setq doom-modeline-height 42)
 
 
-  (use-package
-   treemacs
-   :defer t
-   :init
-  (setq treemacs-follow-after-init t
-	treemacs-is-never-other-window t
-	treemacs-sorting 'alphabetic-case-insensitive-asc
-	treemacs-persist-file (concat "~/.cache/emacs/" "treemacs-persist")
-	treemacs-last-error-persist-file (concat "~/.cache/emacs/" "treemacs-last-error-persist"))
-  (with-eval-after-load 'winum
-    (define-key winum-keymap (kbd "M-0") #'treemacs-select-window))
-   :bind
-    ("<f4>" . treemacs)
+    (use-package
+     treemacs
+     :defer t
+     :init
+    (setq treemacs-follow-after-init t
+	  treemacs-is-never-other-window t
+	  treemacs-sorting 'alphabetic-case-insensitive-asc
+	  treemacs-persist-file (concat "~/.cache/emacs/" "treemacs-persist")
+	  treemacs-last-error-persist-file (concat "~/.cache/emacs/" "treemacs-last-error-persist"))
+    (with-eval-after-load 'winum
+      (define-key winum-keymap (kbd "M-0") #'treemacs-select-window))
+     :bind
+      ("<f4>" . treemacs)
+      :config
+      (treemacs-follow-mode -1))
+
+    (use-package treemacs-all-the-icons)
+
+    (use-package treemacs-magit
+    :after treemacs magit
+    )
+
+    (use-package treemacs-icons-dired
+      :hook (dired-mode . treemacs-icons-dired-mode)
+    )
+
+    (use-package
+     treemacs-projectile
+     :after (treemacs projectile)
+     )
+
+   (use-package centaur-tabs
+    :demand
     :config
-    (treemacs-follow-mode -1))
-
-  (use-package treemacs-all-the-icons)
-
-  (use-package treemacs-magit
-  :after treemacs magit
-  )
-
-  (use-package treemacs-icons-dired
-    :hook (dired-mode . treemacs-icons-dired-mode)
-  )
-
-  (use-package
-   treemacs-projectile
-   :after (treemacs projectile)
-   )
+    (setq centaur-tabs-style "wave"
+        centaur-tabs-height 32
+        centaur-tabs-set-icons t
+        centaur-tabs-show-new-tab-button t
+        centaur-tabs-set-modified-marker t)
+    (centaur-tabs-mode t)
+    :hook
+  (dashboard-mode . centaur-tabs-local-mode)
+  (term-mode . centaur-tabs-local-mode)
+  (calendar-mode . centaur-tabs-local-mode)
+  (org-agenda-mode . centaur-tabs-local-mode))
 #+end_src
 
 * Configs
@@ -233,7 +248,7 @@ Saves to a temp file and puts the filename in the kill ring."
   (add-hook 'prog-mode-hook #'yas-minor-mode)
 
   (use-package exec-path-from-shell)
-  (add-to-list `exec-path "~/.local/share/nvm/versions/node/v18.12.0/bin/")
+  (add-to-list `exec-path "/home/gagi/.local/share/nvm/versions/node/v18.12.0/bin/")
   (use-package direnv
     :config
     (direnv-mode))
@@ -362,6 +377,7 @@ Saves to a temp file and puts the filename in the kill ring."
     (require 'dap-chrome)
     (require 'dap-firefox)
     (require 'dap-node)
+    (require 'dap-netcore)
 
     (use-package company
     :after lsp-mode
