--- a/.config/emacs/MyInit.org
+++ b/.config/emacs/MyInit.org
@@ -222,46 +222,52 @@ Saves to a temp file and puts the filename in the kill ring."
 
 * Editing
 #+begin_src emacs-lisp
-  (prefer-coding-system 'utf-8-unix)
-  (delete-selection-mode 1)
-   (global-subword-mode 1)
+    (prefer-coding-system 'utf-8-unix)
+    (delete-selection-mode 1)
+     (global-subword-mode 1)
 
-  (setq god-mode-enable-function-key-translation nil)
-  (use-package god-mode
-    :bind ("<escape>" . god-mode-all))
+    ;(setq god-mode-enable-function-key-translation nil)
+    ;(use-package god-mode
+    ;  :bind ("<escape>" . god-mode-all))
 
-  (use-package yasnippet
-    :diminish yas-minor-mode
-    :bind (:map yas-minor-mode-map
-		("C-c C-e" . yas-expand))
+    (use-package yasnippet
+      :diminish yas-minor-mode
+      :bind (:map yas-minor-mode-map
+		  ("C-c C-e" . yas-expand))
 
-    :config
-    (yas-reload-all)
+      :config
+      (yas-reload-all)
+      (add-hook 'prog-mode-hook #'yas-minor-mode)
+      ;;(yas-global-mode 1)
+      (setq yas-prompt-functions '(yas-dropdown-prompt
+				   yas-ido-prompt
+				   yas-completing-prompt)))
+
+
+    (use-package yasnippet-snippets)
     (add-hook 'prog-mode-hook #'yas-minor-mode)
-    ;;(yas-global-mode 1)
-    (setq yas-prompt-functions '(yas-dropdown-prompt
-				 yas-ido-prompt
-				 yas-completing-prompt)))
 
+    (use-package exec-path-from-shell)
+    (add-to-list `exec-path "/home/gagi/.local/share/nvm/versions/node/v18.12.0/bin/")
+    (use-package direnv
+      :config
+      (direnv-mode))
+    (use-package format-all)
 
-  (use-package yasnippet-snippets)
-  (add-hook 'prog-mode-hook #'yas-minor-mode)
+    (add-hook 'prog-mode-hook #'format-all-ensure-formatter)
+    (add-hook 'prog-mode-hook 'format-all-mode)
 
-  (use-package exec-path-from-shell)
-  (add-to-list `exec-path "/home/gagi/.local/share/nvm/versions/node/v18.12.0/bin/")
-  (use-package direnv
-    :config
-    (direnv-mode))
-  (use-package format-all)
+    (use-package ws-butler
+      :commands
+      (ws-butler-mode)
+      :init
+      (setq ws-butler-convert-leading-tabs-or-spaces t))
 
-  (add-hook 'prog-mode-hook #'format-all-ensure-formatter)
-  (add-hook 'prog-mode-hook 'format-all-mode)
-
-  (use-package ws-butler
-    :commands
-    (ws-butler-mode)
-    :init
-    (setq ws-butler-convert-leading-tabs-or-spaces t))
+   (use-package evil
+     :demand t
+     :bind (("<escape>" . keyboard-escape-quit))
+     :config
+     (evil-mode 1))
 #+end_src
 
 * Keybinds
@@ -397,10 +403,6 @@ Saves to a temp file and puts the filename in the kill ring."
 * Programming
 ** cmn
 #+begin_src emacs-lisp
-  (use-package tree-sitter)
-  (use-package tree-sitter-langs)
-  (use-package tree-sitter-indent)
-
   (use-package editorconfig
     :commands
     (editorconfig-mode)
